--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@
   font-style: normal;
 }
 
+body {
+  margin: 0;
+}
+
 .social {
   display: flex;
   flex-wrap: wrap;
@@ -27,20 +31,21 @@
   display: flex;
   flex: 0 1 300px;
   justify-content: space-between;
-  font-family: PPNeueMontreal-Book;
+  font-family: PPNeueMontreal-Book, serif;
   font-size: small;
   margin: 1rem 0;
 }
 
 .footer div {
-  font-family: PPNeueMontreal-Bold;
+  font-family: PPNeueMontreal-Bold, serif;
   font-size: small;
   color: hsl(22, 100%, 55%);
 }
 
 header {
-  font-family: PPNeueMontreal-Medium;
-  font-size: 4.3vw;
+  margin-top: 2rem;
+  font-family: PPNeueMontreal-Medium, serif;
+  font-size: 5vw;
   max-width: 1200px;
 }
 
@@ -54,7 +59,7 @@ header {
   display: flex;
   flex: 0 1 100px;
   justify-content: center;
-  font-family: PPNeueMontreal-Medium;
+  font-family: PPNeueMontreal-Medium, serif;
   font-size: large;
   margin: 2rem 0 6rem 0;
 }
@@ -67,7 +72,7 @@ header {
 }
 
 .header {
-  font-family: PPNeueMontreal-Medium;
+  font-family: PPNeueMontreal-Medium, serif;
   font-size: xx-large;
   margin: 5rem 0;
   display: flex;
@@ -78,7 +83,7 @@ header {
 .mission {
   display: flex;
   justify-content: flex-start;
-  font-family: PPNeueMontreal-Medium;
+  font-family: PPNeueMontreal-Medium, serif;
   font-size: x-large;
   max-width: 750px;
   align-self: center;
@@ -89,4 +94,10 @@ header {
   display: flex;
   justify-content: center;
   flex-direction: column;
+}
+
+@media screen and (min-width: 1500px){
+  header {
+    font-size: 4.8rem;
+  }
 }
