--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin: 6rem 0;
+  margin: 4rem 0;
 }
 
 .footer {
@@ -64,6 +64,15 @@ header {
   margin: 2rem 0 6rem 0;
 }
 
+.logo {
+  margin: auto;
+  text-align: center;
+}
+
+.logo img {
+  width: 60%;
+}
+
 .first {
   justify-content: space-between;
   height: 100vh;
@@ -96,7 +105,97 @@ header {
   flex-direction: column;
 }
 
-@media screen and (min-width: 1500px){
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  max-width: 1200px;
+  align-self: center;
+}
+
+.cards > .card {
+  display: flex;
+  flex: 0 1 450px;
+  justify-content: space-between;
+  font-family: PPNeueMontreal-Book, serif;
+  font-size: small;
+  flex-direction: column;
+  margin: 1rem 0;
+  text-align: justify;
+  padding: 4px 16px;
+}
+
+.cards > .card > .img {
+  text-align: center;
+}
+
+.cards > .card > .img > img {
+  width: 12rem;
+}
+
+.cards > .card > .name {
+  text-align: center;
+  margin: 1rem 0;
+}
+
+.cards > .card > .body {
+  text-align: justify-all;
+  margin: 1rem 0;
+  font-size: large;
+}
+
+.section.news {
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  flex-direction: row;
+  max-width: 1200px;
+}
+
+.articles > div.news {
+  padding: 4px 16px;
+}
+
+.articles {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-self: center;
+}
+
+div.updates {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  max-width: 1200px;
+  align-self: center;
+}
+
+/*.articles > .card > .img {*/
+/*  text-align: center;*/
+/*}*/
+
+/*.articles > .card > .img > img {*/
+/*  width: 12rem;*/
+/*}*/
+
+/*.articles > .card > .name {*/
+/*  text-align: center;*/
+/*  margin: 1rem 0;*/
+/*}*/
+
+/*.articles > .card > .body {*/
+/*  text-align: justify-all;*/
+/*  margin: 1rem 0;*/
+/*  font-size: large;*/
+/*}*/
+
+@media screen and (min-width: 1500px) {
   header {
     font-size: 4.8rem;
   }
