--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ body {
   margin: 0;
   color: whitesmoke;
   background: black;
+  background-image: url('background.png');
+  background-repeat: round;
+  background-size: contain;
 }
 
 .social {
