--- a/style.css
+++ b/style.css
@@ -277,4 +277,9 @@ body > div.section.news > div.articles > div.news > a {
     line-height: 1.5em;
     font-size: medium;
   }
+  
+  .articles > .img > img {
+  width: 19rem;
+  }
+  
 }
