--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ body > div.section.news > div.articles > div.news > a {
     max-width: 300px;
     align-self: center;
     line-height: 1.5em;
-    font-size: medium;
+    font-size: x-small;
   }
 
   .articles > .img > img {
