--- a/style.css
+++ b/style.css
@@ -303,6 +303,11 @@ body > div.section.news > div.articles > div.news > a {
 }
 
 @media screen and (max-width: 560px) {
+  body {
+    background-image: url("mobile.png");
+    background-repeat: round;
+  }
+
   .mission {
     font-size: medium;
   }
