--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 .spinner > div {
   width: 18px;
   height: 18px;
-  background-color: #333;
+  background-color: hsl(22, 100%, 55%);
 
   border-radius: 100%;
   display: inline-block;
