--- a/style.css
+++ b/style.css
@@ -383,7 +383,7 @@ body div.section.news > div.articles > div.news > a {
 
 @media screen and (max-width: 560px) {
   body {
-    background-image: url("mobile.png");
+    background-image: url("mob.png");
     background-repeat: round;
   }
 
